# C_compiler

./: .gitignore  CMakeLists.txt  README.md  notes.txt
examples/: example1.asm  example1.c  example2.asm  example2.c  example3.asm  example3.c
src/: grammar.txt  lexer.c  mycompiler.c  parser.c  symboltable.c  token.c  utils.c
src/include/: customstring.c  customstring.h  errors.c  errors.h  lexer.h  parser.h  symboltable.h  token.h  utils.h
src/include/components/: constant.c  constant.h  expression.c  expression.h  function.c  function.h  program.c  program.h  statement.c  statement.h
